# PesqMed

./: .env.example  .gitignore  README.md  menu.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/pesqmed/: __init__.py  config.py
src/pesqmed/services/: __init__.py
src/pesqmed/views/: __init__.py  menu.py
tests/: test_menu.py
