[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pesqmed"
version = "0.1.0"
description = "App PesqMed — cadastro e manutenção de base de médicos (Flet + MySQL)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet==0.85.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
pesqmed = "pesqmed.views.menu:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
